# permalink-checker

./: README.md  permalink-checker.cabal
src/: Atom.hs  CheckList.hs  Main.hs
